# realtime-canonical-streaming

./: .env  .env.example  README.md  dab-config.json  main.py  producer.py  pyproject.toml
src/: config.py
src/graph/: state.py  supervisor.py
src/graph/nodes/: canonical_builder.py  entity_matcher.py  schema_discovery.py  stream_coordinator.py
src/kafka/: producer.py  schemas.py  topics.py
src/mcp/: client.py  dab_client.py
src/realtime_canonical_streaming.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spark/: iceberg_writer.py  kafka_reader.py  session.py  snowflake_writer.py  transformer.py
