[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-canonical-streaming"
version = "1.0.0"
description = "Real-time canonical streaming: Kafka + Spark + Iceberg + Snowflake"
requires-python = ">=3.11"

dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.3.0",
    "mcp>=1.5.0",

    # Kafka
    "kafka-python>=2.0.2",

    # Spark (install manually or via pip)
    "pyspark>=3.5.0",

    # Iceberg (Python fallback for non-Spark operations)
    "pyiceberg[sql-sqlite,pyarrow]>=0.7.0",

    # Snowflake
    "snowflake-connector-python[pandas]>=3.12.0",

    # Source connectors
    "psycopg2-binary>=2.9.9",       # Postgres
    "teradatasql>=20.0.0",          # Teradata
    "aiohttp>=3.10.0",              # DAB REST (SQL Server)

    # Config / utils
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
